# atlas

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  PROGRESS.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
Blueprint/: 01-vision.md  02-engineering.md  03-requirements.md  04-domain-model.md  05-system-architecture.md  06-memory-architecture.md  07-workflow.md  08-tool-catalog.md  09-service-contracts.md  10-domain-models.md
atlas/: __init__.py  _bootstrap.py  _service.py  commands.py  exceptions.py  py.typed  results.py  types.py
atlas/adapters/: __init__.py  protocol.py
atlas/capabilities/: __init__.py  base.py  knowledge_capability.py  presentation_capability.py  project_capability.py  workflow_capability.py  workflow_execution_capability.py
atlas/contracts/: __init__.py  envelope.py  errors.py  version.py
clients/: __init__.py
clients/cli/: __init__.py  application.py  commands.py  parser.py  renderer.py
clients/common/: __init__.py  capabilities.py  formatting.py  progress.py  rendering.py
clients/desktop/: __init__.py
clients/ide/: __init__.py
clients/mcp/: __init__.py
clients/rest/: __init__.py
docs/: README.md  glossary.md
docs/architecture/: ai-constitution.md  application-platform.md  architecture-principles.md  client-adapters.md  domain-model.md  engineering-constitution.md  engineering-knowledge-layer.md  engineering-workflow.md  extension-guide.md  intelligence-layer.md  layered-architecture.md  multi-protocol-ai-runtime.md  persistence.md  platform-layer.md  presentation-layer.md  system-overview.md  traceability.md  workflow-stages.md
docs/decisions/: adr-002-application-platform-layer.md  adr-003-engineering-knowledge-layer.md  adr-004-platform-capability-contract-layer.md  adr-005-grounded-research-and-repo-native-review.md  architecture-baseline-v1.md
docs/diagrams/: application-platform.md  client-adapter-layer.md  domain-relations.md  engineering-pipeline.md  intelligence-layer.md  knowledge-lifecycle.md  knowledge-workflow-integration.md  multi-protocol-ai-runtime.md  platform-request-dispatch.md  presentation-flow.md  proposal-lifecycle.md  repository-flow.md  request-lifecycle.md  system-overview.md
docs/guides/: presentation-extension-guide.md
docs/plans/: phase-13-engineering-knowledge-layer.md  phase-15-platform-layer.md  phase-16-production-readiness.md
docs/reports/: phase-16-sprint-1-platform-hardening.md  phase-16-sprint-2-code-quality.md  phase-16-sprint-2-repository-consistency.md  phase-16-sprint-3-ux-review.md  phase-16-sprint-4-documentation-audit.md  phase-16-sprint-5-end-to-end-validation.md  phase-16-sprint-6-performance-review.md  phase-16-sprint-7-release-engineering.md  release-candidate-stabilization.md
docs/usage/: cli.md
engine/: __init__.py  config.py
engine/ai/: __init__.py  config.py  context.py  engineering_services.py  exceptions.py  executor.py  factory.py  fs_repository.py  markdown.py  prompts.py  provider.py  registry.py  repository.py  serializers.py  services.py  unit_of_work.py
engine/architecture/: __init__.py  exceptions.py  fs_repository.py  repository.py  serializers.py  services.py
engine/domain/: __init__.py  ai.py  ai_drafts.py  ai_feedback.py  architecture.py  conversation.py  engineering_specification.py  enums.py  evaluation.py  knowledge.py  memory.py  metadata.py  planning.py  project.py  prompt_document.py  research.py  review.py  roadmap.py  traceability.py  vocabulary.py  workflow.py  workspace.py
interfaces/: __init__.py
presentation/: __init__.py
shared/: __init__.py  atomic_write.py
tests/: __init__.py  conftest.py  test_config.py  test_shared_atomic_write.py
(+189 files in other folders)
