[project]
name = "atlas"
version = "0.1.0"
description = "ATLAS is an AI-native engineering operating system that transforms ideas into production-ready software through structured research, architecture, planning, implementation, verification, and persistent project intelligence."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
    "pre-commit>=3.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["engine", "interfaces", "shared"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "C4",  # flake8-comprehensions
    "T20", # flake8-print
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-usepathlib
    "ERA", # erricate (dead code)
    "PL",  # pylint
    "RUF", # Ruff-specific rules
]
ignore = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.13"
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
exclude = [
    "^\\.venv/",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --cov=engine --cov=interfaces --cov=shared --cov-report=term-missing --cov-report=xml"
testpaths = ["tests"]
pythonpath = ["."]
